--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
     "hardhat": "^2.6.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "axios": "^0.21.3",
+    "dotenv": "^10.0.0",
+    "tsc": "^2.0.3"
+  },
+  "scripts": {
+    "start": "npx hardhat run ./scripts/proposal-script.ts"
   }
 }
