--- a/package.json
+++ b/package.json
@@ -1,41 +1,50 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^5.0.0",
     "@typechain/hardhat": "^0.0.1",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.10",
     "@types/node-cron": "^2.0.4",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
+    "@typescript-eslint/eslint-plugin": "4.31.0",
+    "@typescript-eslint/parser": "4.31.0",
     "chai": "^4.3.4",
-    "eslint": "^7.32.0",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "18.2.1",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.4.6",
     "hardhat": "^2.6.2",
+    "prettier": "2.4.0",
     "ts-node": "^10.2.1",
     "typechain": "^4.0.3",
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "@ethersproject/bignumber": "^5.4.1",
+    "@ethersproject/contracts": "^5.4.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "axios": "^0.21.3",
     "dotenv": "^10.0.0",
+    "ethers": "^5.4.6",
     "hardhat-abi-exporter": "^2.3.0",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.5",
     "node-cron": "^3.0.0",
     "temp": "^0.9.4",
-    "tsc": "^2.0.3"
+    "tsc": "^2.0.3",
+    "winston": "^3.3.3"
   },
   "scripts": {
     "service": "npx hardhat run ./scripts/scheduleService.ts",
     "getABI": "npx hardhat run ./scripts/getLatestABI.ts",
     "generateTypes": "npx typechain --target ethers-v5",
-    "start": "npx hardhat run ./scripts/runService.ts"
+    "start": "npx hardhat run ./scripts/runService.ts",
+    "lint": "eslint scripts/**.ts ",
+    "lint:fix": "eslint scripts/**.ts --fix",
+    "prettier": "prettier scripts/**/*.ts",
+    "prettier:fix": "prettier --write scripts/**/*.ts"
   }
 }
